# lambda-api

./: .env  .gitignore  Dockerfile  Makefile  deploy_notebook.ipynb  push_project.ipynb  pyproject.toml  requirements.txt
deploy/: .env  api_usage_constraints.json  core.py
deploy/utils/: api_gateway_utils.py  default_values.py  ecr_utils.py  iam_utils.py  lambda_utils.py  misc.py
deploy_scripts/: api_usage_constraints.json  core.py  trust_policy.json
deploy_scripts/utils/: api_gateway_utils.py  default_values.py  ecr_utils.py  iam_utils.py  lambda_utils.py  misc.py
deploy_utils/: api_gateway_utils.py  ecr_utils.py  iam_utils.py  lambda_utils.py  misc.py
lambda_api/: default_values.py  model_resolver.py  predict_service.py  utils.py
tests/: test_api.py  test_utils.py
