[tool.poetry]
name = "lambda-api"
version = "0.1.0"
description = "A repository with implementation details on ML application with deploy scripts"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lambda_api"}]

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "Q"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.poetry.dependencies]
python = "^3.8"
cloudpickle = "^2.2.1"

[tool.poetry.dev-dependencies]
coverage = "^7.3.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ruff = "^0.0.290"
autopep8 = "^2.0.4"
jupyter-core = "^5.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
